<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.ListarRaza">

    <ImageView
        android:id="@+id/imgFondoListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo_listado" />

    <TextView
        android:id="@+id/txtNombreRaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginBottom="41dp"
        android:text="@string/nombreRaza"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollListadoProfesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnAtrasListadoRaza"
        android:layout_width="96dp"
        android:layout_height="55dp"
        android:layout_marginEnd="52dp"
        android:layout_weight="1"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollListadoProfesion"
        app:layout_constraintVertical_bias="0.448"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/txtNumRaza"
        android:layout_width="178dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/yusei_magic"
        android:text="0 habitantes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgFondoListado"
        app:layout_constraintEnd_toStartOf="@+id/btnAtrasListadoRaza"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/btnBorrarHab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:text="@string/borrarHabitante"
        app:layout_constraintBottom_toTopOf="@+id/scrollListadoProfesion"
        app:layout_constraintEnd_toEndOf="@+id/scrollListadoProfesion"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="@+id/imgFondoListado" />

    <EditText
        android:id="@+id/editID"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:autofillHints="1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/id"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreRaza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toEndOf="@+id/btnBorrarHab"
        app:layout_constraintTop_toTopOf="@+id/imgFondoListado"
        app:layout_constraintVertical_bias="0.122"
        tools:ignore="LabelFor" />

    <ScrollView
        android:id="@+id/scrollListadoProfesion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="22dp"
        android:background="#BAFFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/txtNumRaza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreRaza">

        <TableLayout
            android:id="@+id/layoutListadoProfesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/filaCabeceraListado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp">

                <TextView
                    android:id="@+id/txtTituloIDHab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/id"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/txtTituloNombreHab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nombre"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/txtTituloApellidosHab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/apellidos"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/txtTituloRazaHab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edad"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/txtTituloUbicacionHab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ubicacion"
                    android:textColor="#FFFFFF" />
            </TableRow>
        </TableLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>